fixed scrollbar created by width of homepage animation and footer element

--- a/styles/aniTxtStyle.module.css
+++ b/styles/aniTxtStyle.module.css
@@ -15,8 +15,8 @@
     position: relative;
     gap: 40px;
     min-height: 10vh;
-    width: 130vw;
-    transform: translateX(-19vw); 
+    width: 80svw;
+    transform: translateX(-30svw); 
     
 }
 
@@ -27,7 +27,7 @@
     align-items: center;
     justify-content: flex-end;
     position: relative;
-    width: 70%;
+    width: 100%;
     overflow: hidden;
 }
 .word {
